fix sizing and spacing on diaries in profile/show page

--- a/public/stylesheets/cryptids/show.css
+++ b/public/stylesheets/cryptids/show.css
@@ -40,6 +40,7 @@ section {
 .comments-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
   flex-direction: column;
   background-color: rgba(0, 0, 0, 0.486);
