--- a/public/stylesheets/profiles/show.css
+++ b/public/stylesheets/profiles/show.css
@@ -22,11 +22,11 @@ section {
   width: 1100px;
 }
 
-.fave-cryptid-container {
+.cryptid-container {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  flex-direction: column;
+  /* flex-direction: column; */
   background-color: rgba(0, 0, 0, 0.486);
   border: 2px solid #B6CEC3;
   border-radius: 10px;
@@ -36,6 +36,10 @@ section {
   margin: 10px;
   max-width: 1800px;
   width: 1100px;
+}
+
+#my-cryptid-container, #fave-cryptid-container {
+  margin: 10px;
 }
 
 .diary-container {
